openshift/kogito/dc-decision-service.yml
kind: "DeploymentConfig"
apiVersion: "v1"
metadata:
  name: "decision-service"
  namespace: commons-demo
  labels:
    app.kubernetes.io/part-of: modern-app
spec:
  template: 
    metadata:
      labels:
        name: "decision-service"
    spec:
      containers:
        - name: "decision-service"
          image: "commons-demo/decision-service"
  replicas: 1 
  selector:
    name: "decision-service"
  triggers:
    - type: "ConfigChange" 
    - type: "ImageChange" 
      imageChangeParams:
        automatic: true
        containerNames:
          - "decision-service"
        from:
          kind: "ImageStreamTag"
          name: "decision-service:latest"
  strategy: 
    type: "Rolling"
