openshift/kogito/service-decision-service.yml
apiVersion: v1
kind: Service
metadata:
  name: decision-service
spec:
  selector:
    deploymentconfig: decision-service
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
