openshift/kogito/decision-service.yaml
kind: Template
apiVersion: v1
metadata:
  annotations:
    description: OpenShift Commons 2021 Decision Service Template
  name: decision-service
objects: 
- kind: BuildConfig
  apiVersion: build.openshift.io/v1
  metadata:
    labels:
      app: decision-service
    name: decision-service
    namespace: demo-pj
  spec:
    failedBuildsHistoryLimit: 5
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: decision-service:latest
    postCommit: {}
    resources:
      limits:
        cpu: "4"
        memory: 7Gi
    runPolicy: Serial
    source:
      git:
        uri: https://github.com/team-ohc-jp-place/appservices-demo.git
      type: Git
      contextDir: "decision-service"
    strategy:
      sourceStrategy:
        from:
          kind: "DockerImage"
          name: registry.access.redhat.com/ubi8/openjdk-11:1.10-10.1638383051
      type: Source
    successfulBuildsHistoryLimit: 5
    triggers:
    #- github:
    #    secret: h0rDxkCpZXnsl--_Bgu0
    #  type: GitHub
    #- generic:
    #    secret: wX2rK7pIjReKDL7gfnME
    #  type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- kind: ImageStream
  apiVersion: image.openshift.io/v1
  metadata:
    labels:
      app: decision-service
    name: decision-service
    namespace: demo-pj
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations: null
      from:
        kind: DockerImage
        name: image-registry.openshift-image-registry.svc:5000/appservices-demo/decision-service:latest
      generation: null
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- kind: "DeploymentConfig"
  apiVersion: "v1"
  metadata:
    name: "decision-service"
    namespace: demo-pj
    labels:
      app.kubernetes.io/part-of: modern-app
  spec:
    template: 
      metadata:
        labels:
          name: "decision-service"
      spec:
        containers:
          - name: "decision-service"
            image: "appservices-demo/decision-service"
    replicas: 1 
    selector:
      name: "decision-service"
    triggers:
      - type: "ConfigChange" 
      - type: "ImageChange" 
        imageChangeParams:
          automatic: true
          containerNames:
            - "decision-service"
          from:
            kind: "ImageStreamTag"
            name: "decision-service:latest"
    strategy: 
      type: "Rolling"
- kind: Service
  apiVersion: v1
  metadata:
    name: decision-service
  spec:
    selector:
      deploymentconfig: decision-service
    ports:
      - protocol: TCP
        port: 8080
        targetPort: 8080
- kind: Route
  apiVersion: route.openshift.io/v1
  metadata:
    creationTimestamp: null
    name: decision-service
  spec:
    port:
      targetPort: 8080
    to:
      kind: ""
      name: decision-service
      weight: null
  status: {}
parameters:
- description: Nexus Repository.
  name: MAVEN_MIRROR_URL
  required: true
  value: dummy
